# text-processing-api

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  tox.ini
app/api/: api.py  constants.py  schemas.py
app/api/text_distance/: schemas.py  similarity_algorithm_factory.py
app/core/: config.py
app/models/: predict.py
app/preprocessing/: config.py  preprocessing.py  text_normalizer.py  text_preparation.py  tools.py
app/preprocessing/preprocessing_result/: preprocessing_result.pkl
app/preprocessing/raw_text/: raw_text.txt
tests/: conftest.py  test_api.py  test_text_normalizer.py  test_text_preparation.py
