[tool.poetry]
name = "text-processing-api"
version = "0.1.0"
description = "This project provides an API to run a model prediction"
authors = ["annalitvin <litvin_any@ukr.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
uvicorn = "^0.30.1"
fastapi = "^0.111.0"
pydantic = "^1.10.16"
requests = "^2.27.1"

[tool.poetry.group.dev.dependencies]
ipython = "^8.0.1"
ipdb = "^0.13.9"
flake8 = "^4.0.1"
black = "^24.1.0"
isort = "^5.10.1"
pytest = "^7.0.1"
mypy = "^1.0.0"
tox = "^4.13.0"

[tool.black]
line-length = 120
target-version = ['py38']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''

[tool.isort]
profile = "hug"
line_length = 120
src_paths = ["app", "tests"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
